--- a/todoapp/styles.css
+++ b/todoapp/styles.css
@@ -90,3 +90,27 @@ body {
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
 }
 
+a {
+    padding: 10px 20px;
+    font-size: 15px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    background: linear-gradient(45deg,#ff6b81, #f06595);
+    border: none;
+    width: 100px;
+    border-radius: 12px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    display: flex;
+    margin-top: -400px;
+    text-decoration: none;
+
+}
+
+a:hover {
+    background: linear-gradient(45deg, #d640a7, #b537a4);
+    transform: translateY(-5px);
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+
+
